--- a/hw6/index.html
+++ b/hw6/index.html
@@ -12,10 +12,10 @@
       <nav>
         <img href="#" src="./img/Logo.png" alt="logo" />
         <ul class="navigation">
-          <il><p class="navigation-text">Home</p></il>
-          <il><p class="navigation-text">Shop</p></il>
-          <il><p class="navigation-text">Plant Care</p></il>
-          <il><p class="navigation-text">Blogs</p></il>
+          <li><p class="navigation-text">Home</p></li>
+          <li><p class="navigation-text">Shop</p></li>
+          <li><p class="navigation-text">Plant Care</p></li>
+          <li><p class="navigation-text">Blogs</p></li>
         </ul>
         <button class="log_btn" type="submit">
           <span><img src="./img/Logout.png"
