--- a/hw6/index.html
+++ b/hw6/index.html
@@ -6,21 +6,22 @@
     <title>HW6_Iva</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/font.css" />
   </head>
   <body>
     <div class="center-head">
-      <nav>
-        <img href="#" src="./img/Logo.png" alt="logo" />
+      <nav>        
+        <div class="logo"><img src="./img/Logo.png" alt="img_logo" class="img-logo"/></div>
         <ul class="navigation">
-          <li><p class="navigation-text">Home</p></li>
-          <li><p class="navigation-text">Shop</p></li>
-          <li><p class="navigation-text">Plant Care</p></li>
-          <li><p class="navigation-text">Blogs</p></li>
+          <li class="item"><a href="#" class="navigation-text"><span>Home</span></a></li>
+          <li class="item"><a href="#" class="navigation-text"><span>Shop</span></a></li>
+          <li class="item"><a href="#" class="navigation-text"><span>Plant Care</span></a></li>
+          <li class="item"><a href="#" class="navigation-text"><span>Blogs</span></a></li>
         </ul>
-        <button class="log_btn" type="submit">
-          <span><img src="./img/Logout.png"
+        <button class="log_btn" type="button">
+          <img src="./img/Logout.png"
               alt="logout"
-              class="logout-icon"/>Login</span>
+              class="logout-icon"/><span>Login</span>
         </button>
       </nav>
     </div>
@@ -32,7 +33,7 @@
         plants. Use<br> our plants to create an unique Urban Jungle. Order your
         favorite plants!
       </p>
-      <button class="shopnow-btn" type="button">Shop now</button>
+      <button class="shopnow-btn" type="button"><span>Shop now</span></button>
       <img class="foto" src="./img/01_1.png" alt="foto" />
     </div>
   </body>
