--- a/hw6-7/index.html
+++ b/hw6-7/index.html
@@ -195,7 +195,7 @@
               <span class="prod-cost">$119.00</span>
             </a>
           </div>
-          <div class="poduct">
+          <div class="product">
             <a href="#" class="prod-link">
               <div class="plants-photo-backgr">
                 <img
@@ -208,24 +208,24 @@
               <span class="prod-cost">$169.00</span>
             </a>
           </div>
-          <div class="poduct">            
-            <a href="#" class="prod-link">              
+          <div class="product">            
+            <a href="#" class="prod-link">   
+              <div class="sale-banner">
+                <span class="sale-banner-text">13% off</span>
+              </div>           
               <div class="plants-photo-backgr">
                 <img
                   class="prod-img"
                   src=".\img\image_2.png"
                   alt="plants-photo"
                 />
-              </div>
-              <!-- <div class="sale-banner">
-                <span class="sale-banner-text">13% off</span>
-              </div> -->
+              </div>              
               <span class="prod-name">African Violet</span>
               <span class="prod-cost">$199.00</span>
               <span class="prod-cost old-price">$229.00</span>
             </a>            
           </div>
-          <div class="poduct">
+          <div class="product">
             <a href="#" class="prod-link">
               <div class="plants-photo-backgr">
                 <img class="prod-img" src=".\img\013.png" alt="plants-photo" />
@@ -234,7 +234,7 @@
               <span class="prod-cost">$129.00</span>
             </a>
           </div>
-          <div class="poduct">
+          <div class="product">
             <a href="#" class="prod-link">
               <div class="plants-photo-backgr">
                 <img
@@ -247,7 +247,7 @@
               <span class="prod-cost">$139.00</span>
             </a>
           </div>
-          <div class="poduct">
+          <div class="product">
             <a href="#" class="prod-link">
               <div class="plants-photo-backgr">
                 <img
@@ -260,7 +260,7 @@
               <span class="prod-cost">$179.00</span>
             </a>
           </div>
-          <div class="poduct">
+          <div class="product">
             <a href="#" class="prod-link">
               <div class="plants-photo-backgr">
                 <img
@@ -273,7 +273,7 @@
               <span class="prod-cost">$99.00</span>
             </a>
           </div>
-          <div class="poduct">
+          <div class="product">
             <a href="#" class="prod-link">
               <div class="plants-photo-backgr">
                 <img
@@ -286,7 +286,7 @@
               <span class="prod-cost">$59.00</span>
             </a>
           </div>
-          <div class="poduct">
+          <div class="product">
             <a href="#" class="prod-link">
               <div class="plants-photo-backgr">
                 <img
