--- a/hw6-7/index.html
+++ b/hw6-7/index.html
@@ -102,39 +102,39 @@
         <ul class="cat-menu">
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">House plants</span></a>
-            <!-- <span class="prod-numb">(33)</span> -->
+            <span class="prod-numb">(33)</span>
           </li>
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">Potter plants</span></a>
-            <!-- <span class="prod-numb">(12)</span> -->
+            <span class="prod-numb">(12)</span>
           </li>
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">Seeds</span></a>
-            <!-- <span class="prod-numb">(65)</span> -->
+            <span class="prod-numb">(65)</span>
           </li>
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">Small plants</span></a>
-            <!-- <span class="prod-numb">(39)</span> -->
+            <span class="prod-numb">(39)</span>
           </li>
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">Big plants</span></a>
-            <!-- <span class="prod-numb">(23)</span> -->
+            <span class="prod-numb">(23)</span>
           </li>
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">Succulents</span></a>
-            <!-- <span class="prod-numb">(17)</span> -->
+            <span class="prod-numb">(17)</span>
           </li>
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">Trerrariums</span></a>
-            <!-- <span class="prod-numb">(19)</span> -->
+            <span class="prod-numb">(19)</span>
           </li>
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">Gardening</span></a>
-            <!-- <span class="prod-numb">(13)</span> -->
+            <span class="prod-numb">(13)</span>
           </li>
           <li class="item-cat-menu">
             <a href="#"><span class="prod-cat-name">Accessories</span></a>
-            <!-- <span class="prod-numb">(18)</span> -->
+            <span class="prod-numb">(18)</span>
           </li>
         </ul>
         <div class="super-sale-banner">
