--- a/hw-I/index.html
+++ b/hw-I/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Greenshop_HW_Iva</title>
+    <title>GREENSHOP_HW_Iva</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/head&banner.css" />
     <link rel="stylesheet" href="./css/font.css" />
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./css/product.css" />
     <link rel="stylesheet" href="./css/sort-by.css" />
     <link rel="stylesheet" href="./css/offers.css" />
-    <link rel="stylesheet" href="./css/blog-posts.css" />
+    <link rel="stylesheet" href="./css/blog-posts.css" />    
+    <link rel="stylesheet" href="./css/drop-menu.css" />
   </head>
   <body>
     <section class="center-head">
@@ -21,13 +22,49 @@
         </div>
         <ul class="navigation">
           <li class="item">
-            <a href="#" class="navigation-text"><span>Home</span></a>
+            <a href="#" class="navigation-text">Home</a>
           </li>
           <li class="item">
-            <a href="#" class="navigation-text"><span>Shop</span></a>
+            <a href="#" class="navigation-text">Shop</a>
           </li>
           <li class="item">
-            <a href="#" class="navigation-text"><span>Plant Care</span></a>
+            <a href="#" class="navigation-text">Plant Care</a>
+
+            <ul class="nav-inner-list">
+              <li class="inner-item">
+                <a href="#" class="nav-inner-item">Drainage</a>
+              </li>
+              <li class="inner-item">
+                <a href="#" class="nav-inner-item">Fungicides</a>
+              </li>
+              <li class="inner-item">
+                <a href="#" class="nav-inner-item">Fertilizer</a>
+              </li>
+              <li class="inner-item">
+                <a href="#" class="nav-inner-item">Priming</a>
+
+                <ul class="nav-inner-list">
+                  <li class="inner-item">
+                    <a href="#" class="nav-inner-item">Universal</a>
+                  </li>
+                  <li class="inner-item">
+                    <a href="#" class="nav-inner-item">For Ficus</a>
+                  </li>
+                  <li class="inner-item">
+                    <a href="#" class="nav-inner-item">For Cacti</a>
+                  </li>
+                  <li class="inner-item">
+                    <a href="#" class="nav-inner-item">For Citrus</a>
+                  </li>
+                  <li class="inner-item">
+                    <a href="#" class="nav-inner-item">For those in bloom</a>
+                  </li>
+                  <li class="inner-item">
+                    <a href="#" class="nav-inner-item">For Orchids</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
           </li>
           <li class="item">
             <a href="#" class="navigation-text"><span>Blogs</span></a>
@@ -247,7 +284,7 @@
                       </defs>
                     </svg>
                   </div>
-    
+
                   <div class="hover-icon">
                     <svg
                       width="20"
@@ -262,7 +299,7 @@
                       />
                     </svg>
                   </div>
-    
+
                   <div class="hover-icon">
                     <svg
                       width="20"
@@ -278,10 +315,10 @@
                     </svg>
                   </div>
                 </div>
-              </div>              
+              </div>
               <span class="prod-name">Angel Wing Begonia</span>
               <span class="prod-cost">$169.00</span>
-            </a>            
+            </a>
           </div>
           <div class="product">
             <a href="#" class="prod-link">
@@ -303,7 +340,11 @@
           <div class="product">
             <a href="#" class="prod-link">
               <div class="plants-photo-backgr">
-                <img class="prod-img" src="./img/013-Photoroom.png" alt="plants-photo" />
+                <img
+                  class="prod-img"
+                  src="./img/013-Photoroom.png"
+                  alt="plants-photo"
+                />
               </div>
               <span class="prod-name">Beach Spider Lily</span>
               <span class="prod-cost">$129.00</span>
