--- a/hw-I/index.html
+++ b/hw-I/index.html
@@ -11,8 +11,14 @@
     <link rel="stylesheet" href="./css/product.css" />
     <link rel="stylesheet" href="./css/sort-by.css" />
     <link rel="stylesheet" href="./css/offers.css" />
-    <link rel="stylesheet" href="./css/blog-posts.css" />    
+    <link rel="stylesheet" href="./css/blog-posts.css" />
     <link rel="stylesheet" href="./css/drop-menu.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="center-head">
@@ -41,28 +47,47 @@
                 <a href="#" class="nav-inner-item">Fertilizer</a>
               </li>
               <li class="inner-item">
-                <a href="#" class="nav-inner-item">Priming</a>
+                <a href="#" class="nav-inner-item"
+                  >Priming
+                  <span>
+                    <svg
+                      class="arrow-drop-menu"
+                      width="7"
+                      height="10"
+                      viewBox="0 0 7 10"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        class="path"
+                        d="M1.14228 0.945805C0.909014 0.730097 0.908201 0.379612 1.14046 0.162973C1.35161 -0.0339699 1.68269 -0.0524979 1.9164 0.107825L1.98337 0.161288L6.79132 4.60737C7.00401 4.80406 7.02336 5.11265 6.84935 5.32969L6.79135 5.39186L1.9834 9.83868C1.75016 10.0544 1.37278 10.0537 1.1405 9.83706C0.929333 9.64013 0.910782 9.33257 1.08439 9.1162L1.14224 9.05423L5.52584 4.99941L1.14228 0.945805Z"
+                        fill="#3D3D3D"
+                      />
+                    </svg>
+                  </span>
+                </a>
 
-                <ul class="nav-inner-list">
+                <ul class="nav-inner-list2">
                   <li class="inner-item">
-                    <a href="#" class="nav-inner-item">Universal</a>
+                    <a href="#" class="nav-inner-item2">Universal</a>
                   </li>
                   <li class="inner-item">
-                    <a href="#" class="nav-inner-item">For Ficus</a>
+                    <a href="#" class="nav-inner-item2">For Ficus</a>
                   </li>
                   <li class="inner-item">
-                    <a href="#" class="nav-inner-item">For Cacti</a>
+                    <a href="#" class="nav-inner-item2">For Cacti</a>
                   </li>
                   <li class="inner-item">
-                    <a href="#" class="nav-inner-item">For Citrus</a>
+                    <a href="#" class="nav-inner-item2">For Citrus</a>
                   </li>
                   <li class="inner-item">
-                    <a href="#" class="nav-inner-item">For those in bloom</a>
+                    <a href="#" class="nav-inner-item2">For those in bloom</a>
                   </li>
                   <li class="inner-item">
-                    <a href="#" class="nav-inner-item">For Orchids</a>
+                    <a href="#" class="nav-inner-item2">For Orchids</a>
                   </li>
                 </ul>
+
               </li>
             </ul>
           </li>
