--- a/hw-I/index.html
+++ b/hw-I/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="./css/offers.css" />
     <link rel="stylesheet" href="./css/blog-posts.css" />
     <link rel="stylesheet" href="./css/drop-menu.css" />
+    <link rel="stylesheet" href="./css/site-bottom.css" />
+    <link rel="stylesheet" href="./css/site-bottom1.css" />
+    <link rel="stylesheet" href="./css/site-bottom2.css" />
+    <link rel="stylesheet" href="./css/site-bottom3.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -87,7 +91,6 @@
                     <a href="#" class="nav-inner-item2">For Orchids</a>
                   </li>
                 </ul>
-
               </li>
             </ul>
           </li>
@@ -700,6 +703,154 @@
             </a>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="site-bottom">
+      <div class="bottom1">
+        <div class="bott-card">
+          <div class="bott-picture-container">
+            <img src="/img/bottPicture.png" alt="bott-picture" />
+          </div>
+          <div class="bott1-text">
+            <h5 class="bott1-text-title">Garden care</h5>
+            <span class="bott1-text-desc">
+              We are an online plant shop<br />
+              offering a wide range of cheap<br />
+              and trendy plants.</span
+            >
+          </div>
+        </div>
+        <div class="bott-card">
+          <div class="bott-picture-container">
+            <img src="/img/bottPicture(1).png" alt="bott-picture" />
+          </div>
+          <div class="bott1-text">
+            <h5 class="bott1-text-title">Plant renovation</h5>
+            <span class="bott1-text-desc">
+              We are an online plant shop<br />
+              offering a wide range of cheap<br />
+              and trendy plants.</span
+            >
+          </div>
+        </div>
+        <div class="bott-card">
+          <div class="bott-picture-container">
+            <img src="/img/bottPicture(2).png" alt="bott-picture" />
+          </div>
+          <div class="bott1-text">
+            <h5 class="bott1-text-title">Watering graden</h5>
+            <span class="bott1-text-desc">
+              We are an online plant shop<br />
+              offering a wide range of cheap<br />
+              and trendy plants.</span
+            >
+          </div>
+        </div>
+
+        <div class="join-news">
+          <h3 class="bott-title">Would you like to join newsletters?</h3>
+          <div class="bott-form-join">
+            <form class="email-form" action="">
+              <input
+                class="form-input"
+                type="email"
+                name="email"
+                placeholder="enter your email address..."
+              />
+            </form>
+            <button class="join-news-btn">Join</button>
+          </div>
+          <span class="join-news-text"
+            >We usually post offers and challenges in newsletter. We’re<br />
+            your online houseplant destination. We offer a wide range<br />
+            of houseplants and accessories shipped directly from our<br />
+            (green)house to yours!
+          </span>
+        </div>
+      </div>
+
+      <div class="bottom2">
+        <img class="bottom2-img" src="./img/Frame9Logo.png" alt="logo" />
+        <div class="bott-adress">
+          <img class="icon-adress" src="./img/Icon.svg" alt="icon" />
+          <span
+            >70 West Buckingham Ave.<br />
+            Farmingdale, NY 11735</span
+          >
+        </div>
+        <div class="bott-email">
+          <img class="icon-email" src="./img/Icon(1).svg" alt="icon" />
+          <span>contact@greenshop.com</span>
+        </div>
+
+        <div class="bott-phnumb">
+          <img class="icon-phnumb" src="./img/Icon(2).svg" alt="icon" />
+          <span>+88 01911 717 490</span>
+        </div>
+      </div>
+
+      <div class="bottom3">
+        <div class="bottom3-list">
+          <div class="bott-list-col1">
+            <h5 class="bott-title">My account</h5>
+            <ul class="bott3-list">
+              <li class="bott3-list-text">My Account</li>
+              <li class="bott3-list-text">Our stores</li>
+              <li class="bott3-list-text">Contact us</li>
+              <li class="bott3-list-text">Career</li>
+              <li class="bott3-list-text">Specials</li>
+            </ul>
+          </div>
+          <div class="bott-list-col2">
+            <h5 class="bott-title">Help & guide</h5>
+            <ul class="bott3-list">
+              <li class="bott3-list-text">Help Center</li>
+              <li class="bott3-list-text">How to Buy</li>
+              <li class="bott3-list-text">Shipping & Delivery</li>
+              <li class="bott3-list-text">Product Policy</li>
+              <li class="bott3-list-text">How to Return</li>
+            </ul>
+          </div>
+          <div class="bott-list-col3">
+            <h5 class="bott-title">Categories</h5>
+            <ul class="bott3-list">
+              <li class="bott3-list-text">House Plants</li>
+              <li class="bott3-list-text">Potter Plants</li>
+              <li class="bott3-list-text">Seeds</li>
+              <li class="bott3-list-text">Small Plants</li>
+              <li class="bott3-list-text">Accessories</li>
+            </ul>
+          </div>
+        </div>
+        <div class="social">
+          <h5 class="bott-title">Social media</h5>
+          <div class="icon-social">
+            <a href="#" class="icon-s">
+              <img class="icon-so" src="./img/Facebook.svg" alr="Facebook"
+            /></span>
+            <a href="#" class="icon-s">
+              <img class="icon-so" src="./img/Instagram.svg" alt="Instagram"
+            /></a>
+            <a href="#" class="icon-s">
+              <img class="icon-so" src="./img/Twitter.svg" alt="Twitter"
+            /></a>
+            <a href="#" class="icon-s">
+              <img class="icon-so" src="./img/Linkedin.svg" alt="Linkedin"
+            /></a>
+            <a href="#" class="icon-s">
+              <img class="icon-so" src="./img/Union.svg" alt="Union"
+            /></a>            
+          </div>
+          <h5 class="bott-title bott3-title-soc2">We accept</h5>
+          <a href="#" class="pay-link">
+            <img class="img-link-pay" src="./img/image-pay.svg" alt="Pay"/>
+          </a>
+        </div>
+      </div>
+
+      <div class="bottom4">
+        <span class="bottom4-text">© 2021 GreenShop. All Rights Reserved.</span>
       </div>
     </section>
   </body>
